<resources>
    <string name="app_name">Bersih Masjid</string>
    <string name="wait_please">Tunggu Sebentar...</string>
    <string name="dashboard">SELAMAT DATANG DI DASHBOARD ANDA</string>
    <string name="no_item_to_show">Tidak Ada Item</string>
    <string name="todo_add">add diary</string>
    <string name="todo_logout">log out</string>
    <string name="title">Judul</string>
    <string name="nama_masjid">Masjid/Mushala</string>
    <string name="description">Deskripsi</string>
    <string name="_12_januari_2025">12 Januari 2025</string>
    <string name="add_diary">TAMBAH KONTEN</string>
    <string name="add_new_diary">TAMBAH KONTEN BARU</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginback">Ke Login</string>
    <string name="register">Daftar</string>
    <string name="password_reset">RESET PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Nama</string>
    <string name="delete_diary">delete diary</string>
    <string name="edit_diary">edit diary</string>
    <string name="delete_diary_caps">HAPUS DATA</string>
    <string name="submit_delete">KONFIRMASI HAPUS</string>
    <string name="edit_diary_caps">EDIT DATA</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="submit_edit">KONFIRMASI  EDIT</string>
    <string name="reset_pwd_submit">KONFIRMASI  RESET</string>
    <string name="map_dashboard">Dashboard Peta</string>
    <string name="google_maps">Lihat di Google Maps</string>
    <string name="telepon">Telepon</string>
    <string name="username">username</string>
    <string name="lupa_password">LUPA PASSWORD</string>
    <string name="titik_lokasi">Titik Lokasi</string>
    <string name="tambah_konten_user">TAMBAH KONTEN - USER</string>
    <string name="tambah_konten_admin">TAMBAH KONTEN - ADM</string>
    <string name="administrator_dashboard">Administrator Dashboard</string>
    <string name="administrasi_user">Administrasi User</string>
</resources>