<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_bgone"
        android:paddingTop="70dp"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/username"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/purple_500_mod"
        tools:ignore="VisualLintOverlap" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="140dp"
            android:id="@+id/rv_diary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/no_item"
        android:text="@string/no_item_to_show"
        android:visibility="gone"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo_logout"
            android:src="@drawable/logout"
            app:rippleColor="@color/teal_200"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/add"
            android:enabled="true"
            app:rippleColor="@color/teal_200"
            android:src="@drawable/add_floating24"
            android:contentDescription="@string/todo_add" />


    </RelativeLayout>


</RelativeLayout>