<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="false"
    android:orientation="vertical"
    android:background="@drawable/custom_bgone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:textColor="@color/purple_700"
            android:text="@string/password_reset"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:text="@string/email"
            android:cursorVisible="true"
            android:textCursorDrawable="@color/black"
            android:textColorHint="@color/black"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/email"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_text_white"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/reset"
            android:text="@string/reset_pwd_submit"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintButtonSize" />



    </LinearLayout>
    
</LinearLayout>