<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:viewBindingIgnore="false"
    android:orientation="vertical"
    android:background="@drawable/custom_bgone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/sign_up"
            android:textColor="@color/purple_700"
            android:textSize="30sp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:maxLength="25"
            android:inputType="textCapWords"
            android:cursorVisible="true"
            android:drawablePadding="5dp"
            android:minHeight="60dp"
            android:drawableStart="@drawable/name"
            android:layout_marginTop="20dp"
            android:textCursorDrawable="@color/black"
            android:textColorHint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_text_white"
            android:autofillHints="name"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:cursorVisible="true"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/email"
            android:layout_marginTop="20dp"
            android:minHeight="60dp"
            android:textCursorDrawable="@color/black"
            android:textColorHint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_text_white"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            tools:ignore="VisualLintTextFieldSize" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:background="@drawable/custom_text_white"
                android:cursorVisible="true"
                android:drawableStart="@drawable/password"
                android:drawablePadding="5dp"
                android:text="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

<EditText
        android:id="@+id/mobile"
        android:hint="@string/telepon"
        android:cursorVisible="true"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/phone"
        android:layout_marginTop="20dp"
        android:textCursorDrawable="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:background="@drawable/custom_text_white"
        android:inputType="phone"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />


        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/white"
            android:text="@string/register"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/signin"
            android:text="@string/loginback"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/white"
            android:textColor="@color/teal_200"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintButtonSize" />




    </LinearLayout>
    
</LinearLayout>